--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
-.App{
+.App {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+button {
+    all: unset;
+    background-color: #58a36c;
+    padding: 10px;
+    cursor: pointer;
+}
+
+input {
+    all: unset;
+    background-color: #FFFFFF;
+    font-size: 20px;
+    padding: 6px;
+    border: 3px solid #58a36c;
+    color: black;
+}
+
+.icon{
+    height: 20px;
 }
