--- a/src/components/Photo.css
+++ b/src/components/Photo.css
@@ -1,6 +1,10 @@
 .photo{
-    border: 4px solid white;
     margin: 10px;
-    width: max-content;
-    height: max-content;
+    max-width: 100%;
+    height: auto;
+}
+
+.photo img{
+    width: 100%;
+    border: 4px solid white;
 }
